start building for Windows as well

--- a/turbobob.json
+++ b/turbobob.json
@@ -20,6 +20,7 @@
 	"docker_images": [],
 	"os_arches": {
 		"linux-amd64": true,
-		"linux-arm": true
+		"linux-arm": true,
+		"windows-amd64": true
 	}
 }
