--- a/turbobob.json
+++ b/turbobob.json
@@ -5,10 +5,9 @@
 	"builders": [
 		{
 			"name": "default",
-			"uses": "docker://fn61/buildkit-golang:20190316_0913_96b56b86",
-			"mount_source": "",
-			"mount_destination": "/go/src/github.com/function61/function53",
-			"workdir": "/go/src/github.com/function61/function53",
+			"uses": "docker://fn61/buildkit-golang:20200910_1302_9f256d7b",
+			"mount_destination": "/project",
+			"workdir": "/project",
 			"commands": {
 				"build": ["bin/build.sh"],
 				"dev": ["bash"]
