maybe fix Docker build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,3 +16,4 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         EVENTHORIZON: ${{ secrets.EVENTHORIZON }}
+        DOCKER_CREDS: ${{ secrets.DOCKER_CREDS }}
