--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: install buildx
+      uses: crazy-max/ghaction-docker-buildx@v1
+      with:
+        buildx-version: v0.4.1
+        qemu-version: latest
     - name: Download Turbo Bob
       run: curl --fail --location --output bob https://dl.bintray.com/function61/dl/turbobob/20200617_1743_510a0529/bob_linux-amd64 && chmod +x bob
     - name: Build with Turbo Bob
